--- a/griya-mdp/src/app/home/home.html
+++ b/griya-mdp/src/app/home/home.html
@@ -1,6 +1,5 @@
 <h1>Perumahan Impian Semua Insan</h1>
 <div>
-    @for=("let num of number; track num"){
-            </app-lokasi-perumahan></app-lokasi-perumahan>
-    }
+    <app-lokasi-perumahan></app-lokasi-perumahan>
+    <app-lokasi-perumahan></app-lokasi-perumahan>
 </div>
